--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,17 @@
   .noscroll body {
     overflow: hidden;
   }
+
+  .media--fullwidth {
+    width: 100%;
+    height: auto;
+}
+nav>h4::before {
+    content: url("../../public/icones/book.svg");
+}
+nav>ul>li>a::before {
+    content: url("../../public/icones/bag-plus.svg");
+}
+nav>ul>li>ul>li>a::before {
+    content: url("../../public/icones/archive.svg");
+}
