--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,6 +9,11 @@
     place-content: center;
   }
 
+  dt, .logoaccordeon {
+    display: flex;
+    align-items: center;
+}
+
   .header__menu-Btn {
     position: relative;
     z-index: 10;
