--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -174,6 +174,10 @@ a {
   text-decoration: none;
 }
 
+
+
+
+
 /*Pour lapage 404*/
 @import url('https://fonts.googleapis.com/css?family=Audiowide&display=swap');
 
@@ -203,7 +207,7 @@ div {
 
 h2 {
   position: absolute;
-  top: 50%;
+  top: 30vh;
   left: 50%;
   margin-top: 150px;
   font-size: 32px;
@@ -223,7 +227,7 @@ h2 {
   height: auto;
   width: 600px;
   max-width: 100%;
-  top: 50%;
+  top: 30vh;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -498,4 +502,69 @@ div {
   100% {
     filter: hue-rotate(0deg);
   }
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  border: 0;
+}
+input[type="text"] {
+ 
+  background: #f4e5d7;
+  border: 1px solid #f4e5d7;
+  border-radius: 8px;
+  padding: 10px 10px;
+  color: #12000b;
+  font-family: 'Archivo Black', sans-serif;
+  text-align: center;
+}
+button {
+  appearance: none;
+  border: none;
+  background: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 5vh;
+}
+
+.btn {
+  position: absolute;
+  bottom: 15vh;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 50px;
+  padding: 10px 0px;
+  background-color: #ff005d;
+  border: 1px solid #ff005d;
+  border-radius: 8px;
+  transition: 0.3s;
+  text-shadow: 0px 0px 4px #12000a;
+  animation: fadeInText 3s ease-in 3.5s forwards, flicker4 5s linear 7.5s infinite, hueRotate 6s ease-in-out 3s infinite;
+
+}
+  
+ .search {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 50px;
+  padding: 10px 20px;
+  background-color: #ff005d;
+  border: 1px solid #ff005d;
+  border-radius: 8px;
+  transition: 0.3s;
+  text-shadow: 0px 0px 4px #12000a;
+  animation: fadeInText 3s ease-in 3.5s forwards, flicker4 5s linear 7.5s infinite, hueRotate 6s ease-in-out 3s infinite;
+
 }
